backend: unit tests